--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
 				</div>
 				<div class="m_topnei">
 					<img src="images/03_002.jpg" />
-					<a href="jdindex.html">
+					<a href="jdxm/index.html">
 						<h3>作品集三</h3>
-						<span>购物车结算jq，订单的选择或删除、金额的计算。</span>
+						<span>京东商城静态页面，以及CSS3动画效果</span>
 					</a>
 				</div>
 				<div class="m_topnei gai2">
@@ -203,16 +203,16 @@
 				</div>
 				<div class="m_topnei">
 					<img src="images/07.jpg" />
-					<a href="#">
+					<a href="jdxm/index.html">
 						<h3>作品集七</h3>
-						<span>列表页，兼容安卓、ios、平板</span>
+						<span>商城里面购物，图片放大镜效果</span>
 					</a>
 				</div>
 				<div class="m_topnei gai2">
 					<img src="images/08.jpg" />
 					<a href="#">
 						<h3>作品集八</h3>
-						<span>自己平时的知识点积累~</span>
+						<span>用JQ实现的3D动画效果</span>
 					</a>
 				</div>
 			</div>
@@ -237,14 +237,14 @@
 				期待您的留言<textarea class="textarea"></textarea>
 			<input type="submit" class="submit" value="提　交" />
 			</form>
-			<img src="images/weixin.jpg"/>
+			<img src="images/weixin.jpg" />
 		</div>
         <!--主体内容结尾-->
        	<div class="home"><a href="#">回顶部</a></div>
        	<!--底部开始-->
 		<div class="footer">
 			<div class="f_inner" id="Contact">
-				<p> © 2017年8月5 <span>我的简历</span> - More Templates <span>个人创作</span></p>
+				<p> © 2017年8月15 <span>我的简历</span> - More Templates <span>个人创作</span>本网站所有页面仅供展示，非任何盈利，若有问题请联系我！</p>
 				<div class="f_right ftu3">
 					<a href="#"></a>
 				</div>
