--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 				</div>
 				<div class="m_topnei gai2">
 					<img src="images/08.jpg" />
-					<a href="#">
+					<a href="xiangce/index.html">
 						<h3>作品集八</h3>
 						<span>用JQ实现的3D动画效果</span>
 					</a>
