--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 				</div>
 				<div class="m_topnei">
 					<img src="images/07.jpg" />
-					<a href="jdxm/index.html">
+					<a href="jdxm/details.html">
 						<h3>作品集七</h3>
 						<span>商城里面购物，图片放大镜效果</span>
 					</a>
